# delta_db

./: .gitignore  Cargo.toml  test.db
.sqlx/: query-05c58077917eadf660fc064cafdfa9b38b1a660e00f43a58db0857297f3d357c.json  query-1716738b05ba921e1a5a47d77cbc22aad94c32c6e61248f997cbb62e92339e6b.json  query-3953a38206958d8b2d317d5016b4e7b488f61e0127e5ecbfc6565e3971be2066.json  query-61f053140736f19593d28a114e302b63eeb7426de8c3fdab46b98797814066aa.json  query-86103212eab4b8e23d589e682608cc2708dcacc07c22307d57d12769fae5221d.json  query-9ea1b84e4203100278f2da31aa2d3eb86083556f5c0e80f4cc5173645733d1c6.json  query-a054b12379a90ca5f07d9d6f95ca25dbd11400e19939fc127c5cab957bc9cb01.json  query-cbdb8209d4638fb53106ae3ef155c301e88e60b5fc60213d53bb2a8f6fd2b200.json  query-ce0892aac27609956dc4f9f46b80fd40ea349281fddb1ab9650af6ac616013f9.json  query-e361aabc453666877dcbd969bac34810f6886ef6838c3ed2df0e816eeb8971f6.json
backend/: Cargo.toml  delta.db  test.db
backend/.sqlx/: query-0a4b345e7cd8659f9bee5d06b9f02891ab2434a3a00d5137a8be6dbc32470381.json  query-3cbb3b1408a32491682b451604159bbc1b2b65c4ad4e2e55a5bb011c7374124b.json  query-400bfb67794785a6557162d22ccd421a86f042bfd45b3adf0484989aaf7a94c8.json  query-7375bf2b222bfcbf4adc139e70b55b3b46eb0499f01aa796111be072d98f0256.json  query-c18fb22f53a43dc04fd18132f6e5449ef0cfa28cbb4df800e970be03659feeb6.json
backend/sql/: query_latest_version_cfg.sql  query_specific_version_cfg.sql
backend/src/: lib.rs  main.rs
example_data/: blog_post.yaml  book_metadata.yaml  ci_cd_pipeline.yaml  create.sh  product_inventory.yaml  restaurant_menu.yaml  server_environment.yaml  task_list.yaml  test1.yaml  user_profile.yaml  weather_forecast.yaml
example_data_v1/: blog_post.yaml  book_metadata.yaml  ci_cd_pipeline.yaml  config_web_app.yaml  create.sh  product_inventory.yaml  restaurant_menu.yaml  server_environment.yaml  task_list.yaml  user_profile.yaml  weather_forecast.yaml
migrations/: 20240427091908_init.sql
pyo3/: Cargo.toml
pyo3/src/: lib.rs
sql/: query_specific_version_cfg.sql
src/: lib.rs  main.rs  tui.rs
tests/: test.yaml
tui/: Cargo.toml
tui/src/: base_searcher.rs  lib.rs  main.rs  matcher.rs  tui.rs
