[package]
name = "delta_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "delta_backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
  "runtime-tokio",
  "sqlite",
  "json",
  "uuid",
  "chrono",

] }
tokio = { version = "1.37.0", features = ["full"] }
pollster = "*"
tracing = "*"
tracing-subscriber = "*"
