[package]
name = "pyo3"
version = "0.1.0"
edition = "2021"

[lib]
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]
[dependencies]
pyo3 = { version = "0.21.2", features = ["anyhow"] }
delta_backend = { path = "../backend/" }
anyhow = "*"
