[package]
name = "delta_tui"
version = "0.1.0"
edition = "2021"

[lib]
name = "delta_tui"

[dependencies]
ratatui = { version = "0.27.0", features = ["all-widgets"] }
crossterm = "0.27.0"
nucleo = "0.5.0"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
similar = "2.5.0"
# delta_backend = { path = "../backend/" }
